# opencog

./: CMakeLists.txt  cmakelist.sh
